--- a/src/feedback.pug
+++ b/src/feedback.pug
@@ -27,5 +27,6 @@ block content
                 div
                     div.message.flex.flex-a-c
                         +switch()
-                        .message-text Нажимая кнопку отправить, Вы даете согласие на обработку Ваших персональных данных в соответствии с Политикой
+                        .message-text Нажимая кнопку отправить, Вы даете согласие на обработку Ваших персональных данных в соответствии с
+                            a(href='#', target='blank').b-link Политикой
                     +usualButton('Отправить', 'w-100 mt-halfStep')
