--- a/src/styles/modules/footer.sass
+++ b/src/styles/modules/footer.sass
@@ -154,10 +154,35 @@ footer
     height: em(36, 16)
     border-radius: 50%
     overflow: hidden
+    background: #EFF1F8
+    display: flex
+    align-items: center
+    justify-content: center
+    transition: .4s all
+
+    svg
+      max-width: em(20, 16)
+      fill: var(--textColor)
+      transition: .4s all
+      max-height: em(21, 16)
+
+    &:hover
+
+      svg
+        fill: #fff
 
     img
       width: 100%
       height: 100%
+
+  &__social--ok:hover
+    background: var(--okColor)
+
+  &__social--vk:hover
+    background: var(--vkColor)
+
+  &__social--telegram:hover
+    background: var(--telegramColor)
 
   &__rest
     display: flex
