--- a/src/components/news.pug
+++ b/src/components/news.pug
@@ -1,7 +1,7 @@
 mixin news(className)
     - var index = 0;
     while (index++ < 4)
-        a.news__item.gridItemX2(href="#", class= className)
+        a.news__item.gridItemX2(href="newsPage.html", class= className)
             .news__img
                 img(src=`@img/temporary/news-${index}.png`)
             .news__info
