--- a/src/layouts/modules/main/footer.pug
+++ b/src/layouts/modules/main/footer.pug
@@ -29,13 +29,13 @@ footer
                         li
                             a.link(href="information.html") Сведения об образовательной организации
                         li
-                            a.link(href="#") Новости
+                            a.link(href="news.html") Новости
                         li
                             a.link(href="ourGroups.html") Группы
                         li
                             a.link(href="collective.html") Коллектив
                         li
-                            a.link(href="#") Контакты
+                            a.link(href="contacts.html") Контакты
                         li
                             a.link(href="#") Политика обработки персональных данных
                 .footer__block
@@ -45,19 +45,19 @@ footer
                             use(href="@img/icons/icons.svg#arrow-select")
                     ul.footer__list
                         li
-                            a.link(href="#") Порядок приема в детсад
+                            a.link(href="order.html") Порядок приема в детсад
                         li
-                            a.link(href="#") Компенсация оплаты за сад
+                            a.link(href="compensation.html") Компенсация оплаты за сад
                         li
                             a.link(href="#") Время приема заведующего
                         li
-                            a.link(href="#") Бланки заявлений
+                            a.link(href="blanks.html") Бланки заявлений
                         li
-                            a.link(href="#") Частые вопросы
+                            a.link(href="questions.html") Частые вопросы
                         li
-                            a.link(href="#") Советы специалистов
+                            a.link(href="advices.html") Советы специалистов
                         li
-                            a.link(href="#") Школы рядом с садиком
+                            a.link(href="schools.html") Школы рядом с садиком
                 .footer__block
                     .footer__title
                         | O нас
@@ -65,15 +65,15 @@ footer
                             use(href="@img/icons/icons.svg#arrow-select")
                     ul.footer__list
                         li
-                            a.link(href="#") История детского сада
+                            a.link(href="about.html") История детского сада
                         li
-                            a.link(href="#") Достижения
+                            a.link(href="achievements.html") Достижения
                         li
-                            a.link(href="#") Видеогалерея
+                            a.link(href="ourVideos.html") Видеогалерея
                         li
-                            a.link(href="#") Фотогалерея
+                            a.link(href="galleries.html") Фотогалерея
                         li
-                            a.link(href="#") Реквизиты
+                            a.link(href="requisites.html") Реквизиты
                         li
                             a.link(href="#") Вакансии
             .footer__rest
