--- a/src/components/ourVideos.pug
+++ b/src/components/ourVideos.pug
@@ -2,7 +2,7 @@ mixin ourVideos(repeat= 1, className= '', data= [{img: '@img/temporary/video-1.p
     - var index = 0;
     while (index++ < repeat)
         each item in data
-            a.ourVideos__item(href='#', class= className)
+            a.ourVideos__item(href='group.html', class= className)
                 .tinyText 12 июля 2023
                 .ourVideos__img.border-radius
                     img.border-radius(src=item.img, alt=item.text)
