--- a/src/layouts/modules/parts/smallBanner.pug
+++ b/src/layouts/modules/parts/smallBanner.pug
@@ -7,6 +7,6 @@ section
                 .smBanner__text Не можете записать ребёнка в сад?
                 .smBanner__text Хотите рассказать о воспитателях?
                 .smBanner__text Знаете, как улучшить питание и занятия?
-                +whiteButton('Написать сообщение', 'bigButton')
+                +whiteButton('Написать сообщение', 'bigButton', 'feedback.html')
             .smBanner__img
                 img(src="@img/temporary/smBanner-1.png")
