--- a/src/achievements.pug
+++ b/src/achievements.pug
@@ -33,25 +33,35 @@ block content
                                         while (index <= 4)
                                             - index++
                                             .achievementsItem.wide.active
-                                                img(src=`@img/temporary/achievements-1.png`, alt='image', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-1.png`)
+                                                img(src=`@img/temporary/achievements-1.png`, alt='image', loading='lazy', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-1.png`)
+                                                .swiper-lazy-preloader
                                             .achievementsItem.wide.active
-                                                img(src=`@img/temporary/achievements-2.png`, alt='image', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-2.png`)
+                                                img(src=`@img/temporary/achievements-2.png`, alt='image', loading='lazy', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-2.png`)
+                                                .swiper-lazy-preloader
                                             .achievementsItem.active
-                                                img(src=`@img/temporary/achievements-3.png`, alt='image', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-3.png`)
+                                                img(src=`@img/temporary/achievements-3.png`, alt='image', loading='lazy', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-3.png`)
+                                                .swiper-lazy-preloader
                                             .achievementsItem.wide.active
-                                                img(src=`@img/temporary/achievements-4.png`, alt='image', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-4.png`)
+                                                img(src=`@img/temporary/achievements-4.png`, alt='image', loading='lazy', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-4.png`)
+                                                .swiper-lazy-preloader
                                             .achievementsItem.wide.active
-                                                img(src=`@img/temporary/achievements-4.png`, alt='image', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-4.png`)
+                                                img(src=`@img/temporary/achievements-4.png`, alt='image', loading='lazy', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-4.png`)
+                                                .swiper-lazy-preloader
                                         while (index <= 10)
                                             - index++
                                             .achievementsItem.wide
-                                                img(src=`@img/temporary/achievements-1.png`, alt='image', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-1.png`)
+                                                img(src=`@img/temporary/achievements-1.png`, alt='image', loading='lazy', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-1.png`)
+                                                .swiper-lazy-preloader
                                             .achievementsItem.wide
-                                                img(src=`@img/temporary/achievements-2.png`, alt='image', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-2.png`)
+                                                img(src=`@img/temporary/achievements-2.png`, alt='image', loading='lazy', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-2.png`)
+                                                .swiper-lazy-preloader
                                             .achievementsItem
-                                                img(src=`@img/temporary/achievements-3.png`, alt='image', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-3.png`)
+                                                img(src=`@img/temporary/achievements-3.png`, alt='image', loading='lazy', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-3.png`)
+                                                .swiper-lazy-preloader
                                             .achievementsItem.wide
-                                                img(src=`@img/temporary/achievements-4.png`, alt='image', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-4.png`)
+                                                img(src=`@img/temporary/achievements-4.png`, alt='image', loading='lazy', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-4.png`)
+                                                .swiper-lazy-preloader
                                             .achievementsItem.wide
-                                                img(src=`@img/temporary/achievements-4.png`, alt='image', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-4.png`)
+                                                img(src=`@img/temporary/achievements-4.png`, alt='image', loading='lazy', data-popup-group=`achievements-${year}`, data-popup-image=`@img/temporary/achievements-4.png`)
+                                                .swiper-lazy-preloader
                                     +whiteButton('Загрузить еще', 'arrow-bottom mt-step w-100')
