--- a/src/group.pug
+++ b/src/group.pug
@@ -26,7 +26,7 @@ block content
             .linkFile.mt-step
                 .linkFile__icon
                     img(src="@img/yandexDiskIcon.svg", alt='yandex')
-                .linkFile__text Актуальное меню на
+                .linkFile__text= 'Актуальное меню на '
                     a(href="#").underline яндекс.диске
                 +usualButton('Смотреть меню', 'ml-auto')
             .linkFile.mt-step
