--- a/src/styles/modules/parts/popup.sass
+++ b/src/styles/modules/parts/popup.sass
@@ -22,9 +22,8 @@
 
   &__content
     margin: auto
-    width: 95%
-    max-width: 750px
-    max-height: 95%
+    max-width: 85%
+    max-height: 85%
     color: #fff
 
   &__arrow
