--- a/src/components/galleryGrid.pug
+++ b/src/components/galleryGrid.pug
@@ -1,18 +1,18 @@
 mixin galleryGrid(className)
     .gallery(class= className)
-        img.gallery__item.wide(src=`@img/temporary/galleryGrid-1.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-1.png")
-        img.gallery__item(src=`@img/temporary/galleryGrid-2.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-2.png")
-        img.gallery__item.wide(src=`@img/temporary/galleryGrid-3.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-3.png")
-        img.gallery__item(src=`@img/temporary/galleryGrid-4.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-4.png")
-        img.gallery__item.wide(src=`@img/temporary/galleryGrid-5.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-5.png")
-        img.gallery__item(src=`@img/temporary/galleryGrid-13.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-13.png")
-        img.gallery__item(src=`@img/temporary/galleryGrid-6.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-6.png")
-        img.gallery__item.super-wide(src=`@img/temporary/galleryGrid-7.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-7.png")
-        img.gallery__item.super-wide(src=`@img/temporary/galleryGrid-8.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-8.png")
-        img.gallery__item(src=`@img/temporary/galleryGrid-9.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-9.png")
-        img.gallery__item.super-wide(src=`@img/temporary/galleryGrid-10.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-10.png")
-        img.gallery__item.wide(src=`@img/temporary/galleryGrid-11.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-11.png")
-        img.gallery__item(src=`@img/temporary/galleryGrid-12.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-12.png")
-        img.gallery__item(src=`@img/temporary/galleryGrid-14.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-14.png")
-        img.gallery__item(src=`@img/temporary/galleryGrid-15.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-15.png")
-        img.gallery__item.wide(src=`@img/temporary/galleryGrid-16.png`, data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-16.png")
+        img.gallery__item.wide(src=`@img/temporary/galleryGrid-1.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-1.png")
+        img.gallery__item(src=`@img/temporary/galleryGrid-2.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-2.png")
+        img.gallery__item.wide(src=`@img/temporary/galleryGrid-3.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-3.png")
+        img.gallery__item(src=`@img/temporary/galleryGrid-4.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-4.png")
+        img.gallery__item.wide(src=`@img/temporary/galleryGrid-5.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-5.png")
+        img.gallery__item(src=`@img/temporary/galleryGrid-13.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-13.png")
+        img.gallery__item(src=`@img/temporary/galleryGrid-6.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-6.png")
+        img.gallery__item.super-wide(src=`@img/temporary/galleryGrid-7.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-7.png")
+        img.gallery__item.super-wide(src=`@img/temporary/galleryGrid-8.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-8.png")
+        img.gallery__item(src=`@img/temporary/galleryGrid-9.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-9.png")
+        img.gallery__item.super-wide(src=`@img/temporary/galleryGrid-10.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-10.png")
+        img.gallery__item.wide(src=`@img/temporary/galleryGrid-11.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-11.png")
+        img.gallery__item(src=`@img/temporary/galleryGrid-12.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-12.png")
+        img.gallery__item(src=`@img/temporary/galleryGrid-14.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-14.png")
+        img.gallery__item(src=`@img/temporary/galleryGrid-15.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-15.png")
+        img.gallery__item.wide(src=`@img/temporary/galleryGrid-16.png`, alt='image', loading='lazy', data-popup-group="gallery", data-popup-image="@img/temporary/galleryGrid-16.png")
