--- a/src/components/ourVideos.pug
+++ b/src/components/ourVideos.pug
@@ -4,8 +4,9 @@ mixin ourVideos(repeat= 1, className= '', data= [{img: '@img/temporary/video-1.p
         each item in data
             a.ourVideos__item(href='group.html', class= className)
                 .tinyText 12 июля 2023
-                .ourVideos__img.border-radius
-                    img.border-radius(src=item.img, alt=item.text)
+                .ourVideos__img.border-radius.relative
+                    img.border-radius(src=item.img, alt=item.text, loading='lazy').relative.priority
+                    .swiper-lazy-preloader.animate
                     .videoSign
                 .ourVideos__text
                     svg
