--- a/src/layouts/modules/parts/about.pug
+++ b/src/layouts/modules/parts/about.pug
@@ -3,8 +3,8 @@ include ../../../components/UI/slideButtons
 section
     .container
         .flexBox
-            .flexBox__img
-                img(src="@img/temporary/about-1.png")
+            .flexBox__img.relative
+                img(src="@img/temporary/about-1.png", alt='about us', loading='lazy').relative.priority
             .flexBox__content
                 h2.flexBox__title О нас
                 p Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим счастливой жизни. Действительно, никто не отвергает, не презирает, не избегает наслаждений только из-за того, что это наслаждения, но лишь из-за того, что тех, кто не умеет разумно предаваться наслаждениям, постигают великие страдания.
