--- a/src/layouts/modules/parts/logo.pug
+++ b/src/layouts/modules/parts/logo.pug
@@ -1,6 +1,6 @@
 a.logo(href='/', class= logoResize ? 'resize' : '')
     .logo__img
-        img(src="@img/logo.svg")
+        img(src="@img/logo.svg", alt='logo')
     .logo__textBlock
         .logo__text Детский сад №73
         .logo__title Солнышко
