--- a/src/layouts/modules/parts/smallBanner.pug
+++ b/src/layouts/modules/parts/smallBanner.pug
@@ -9,4 +9,4 @@ section
                 .smBanner__text Знаете, как улучшить питание и занятия?
                 +whiteButton('Написать сообщение', 'bigButton', 'feedback.html')
             .smBanner__img
-                img(src="@img/temporary/smBanner-1.png")
+                img(src="@img/temporary/smBanner-1.png", loading='lazy', alt='image')
