--- a/src/layouts/template.pug
+++ b/src/layouts/template.pug
@@ -7,8 +7,9 @@ html(lang='en')
         meta(http-equiv="X-UA-Compatible" content="ie=edge")
         meta(name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
         title= pageTitle
-        link(rel='stylesheet' href='styles/bvi.min.css')
-        link(rel='stylesheet' href='styles/main.min.css')
+        link(rel='icon' href='favicon.svg')
+        link(rel='stylesheet' href='styles/bvi.css')
+        link(rel='stylesheet' href='styles/main.css')
     body
         include modules/main/header
         main
