--- a/src/ourGroups.pug
+++ b/src/ourGroups.pug
@@ -19,7 +19,7 @@ block content
                 each text in ['Солнышко', 'С более длинным названием', 'С очень очень очень длинным названием', 'Солнышко', 'Солнышко', 'С более длинным названием', 'С очень очень очень длинным названием', 'С более длинным названием', 'Солнышко', 'С более длинным названием']
                     a.groups__item.gridX2Item.groups__item--big(href='group.html')
                         .groups__img
-                            img(src="@img/temporary/groups-2.png")
+                            img(src="@img/temporary/groups-2.png", alt='group')
                         .groups__info.ml-auto.mr-auto
                             .groups__title Группа №1
                             .groups__subtitle= text
