--- a/src/styles/modules/header.sass
+++ b/src/styles/modules/header.sass
@@ -65,6 +65,34 @@ html.theme-visually-impaired
 .header
   font-size: 1rem
 
+  &__linkWithSublist
+    position: relative
+
+    &:hover
+      .header__sublistWrapper
+        opacity: 1
+        pointer-events: initial
+
+  &__sublistWrapper
+    @include useAbsolutePosition(50%, 100%)
+    transform: translateX(-50%)
+    padding-top: em(10, 16)
+    z-index: 100
+    transition: $defaultTransitionDuration opacity
+    opacity: 0
+    pointer-events: none
+    max-width: 300px
+    min-width: em(220, 16)
+
+  &__sublist
+    background: #fff
+    padding: 1em
+    gap: em(10, 16)
+    box-shadow: 0 em(8.15707, 16) em(43.5044, 16) rgba(0, 0, 0, 0.07), 0 em(1.82199, 16) em(9.71727, 16) rgba(0, 0, 0, 0.0417275), 0 em(0.542454, 16) em(2.89309, 16) rgba(0, 0, 0, 0.0282725)
+
+    .link
+      font-size: em(12, 16)
+
   &__rest
     display: flex
     justify-content: space-between
@@ -111,6 +139,7 @@ html.theme-visually-impaired
       li
         white-space: nowrap
 
+
     @media screen and (max-width: $headerFirstResponse)
       margin: 0 0 0 rem(145)
       gap: rem(10)
@@ -121,11 +150,13 @@ html.theme-visually-impaired
     align-items: center
     flex-shrink: 0
     margin-left: 1rem
-
     @include firstResponseContactBlocks($headerFirstResponse)
 
     @media screen and (max-width: $headerSecondResponse)
       font-size: rem(12)
+
+      .socials
+        display: none
 
       .button
         padding: em(5, 12)
@@ -135,6 +166,10 @@ html.theme-visually-impaired
     .weakText
       letter-spacing: em(-0.4, 16)
 
+    @media screen and (max-width: $headerSecondResponse)
+      .pairWords
+        display: none
+
   &__tel
     transition: $defaultTransitionDuration all
     @include setFonts(20, var(--textColor), lh(26, 20), -0.4)
@@ -143,6 +178,24 @@ html.theme-visually-impaired
 
   &__burgerWrapper
     position: relative
+
+    & .header__sublistWrapper
+      left: 100%
+      top: 0
+      padding-top: 0
+      transform: translateX(0)
+
+      @media screen and (max-width: $headerFirstResponse)
+        left: 0
+        transform: translateX(-100%)
+
+      .header__sublist
+        padding: 10px
+        box-shadow: none
+        gap: 0
+        border-radius: 0
+        background: var(--greyBackground)
+
 
   &__burgerMenu
     padding: rem(10)
@@ -157,7 +210,8 @@ html.theme-visually-impaired
       line-height: 1
 
       @media screen and (max-width: $headerSecondResponse)
-        font-size: em(12, 16)
+        //font-size: em(12, 16)
+        display: none
 
     &:hover
 
@@ -165,6 +219,7 @@ html.theme-visually-impaired
         color: var(--textHoverColor)
 
       .header__burger
+
         &:before, span, &:after
           background: var(--textHoverColor)
 
@@ -185,6 +240,9 @@ html.theme-visually-impaired
     width: em(18, 16)
     height: em(18, 16)
     position: relative
+
+    @media screen and (max-width: $headerSecondResponse)
+      margin-right: 0
 
     &:before, &:after, span
       height: 2px
@@ -224,5 +282,26 @@ html.theme-visually-impaired
 
     li .link
       padding: rem(10)
-      display: block
+      display: flex
+      width: 100%
       cursor: pointer
+
+
+
+#header-container
+
+  &.fixed
+
+    @media screen and (max-width: $mobile)
+      position: fixed
+      padding-bottom: em(15, 16)
+      top: 0
+      left: 0
+      width: 100%
+      transition: $defaultTransitionDuration all
+      background: #ffffff
+      z-index: 110
+      border-bottom: 2px solid var(--staticBorderColor)
+
+      &.hide
+        transform: translateY(-100%)
